--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,14 @@
 .App {
   text-align: center;
 }
+.app__body {
+  display: grid;
+  place-items: center;
+  margin-left: auto;
+  margin-right: auto;
+  padding-top: 100px;
+  padding-bottom: 100px; 
+}
 
 .App-logo {
   height: 40vmin;
