--- a/src/css/Login.css
+++ b/src/css/Login.css
@@ -12,6 +12,13 @@
     padding-bottom: 100px;  
 }
 
+.container_css {
+    margin-top: 13.5rem;
+    margin-right: auto;
+    margin-left: auto;
+    padding:2.0rem
+}
+
 .login > form {
     display: flex;
     flex-direction: column;
